<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_transform</name>
  <version>0.0.0</version>
  <description>The pointcloud_transform package</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>

</package>
